script/res/515030910644_游志宇/compile-message/vector-advan
In file included from ./testspace/vector-advan.cc:1:
In file included from ./testspace/vector.hpp:1:
./testspace/../submit/515030910644_游志宇/vector.hpp:172:13: error: call to function 'malloc' that is neither visible in the template definition nor found by argument-dependent lookup
                arr = (T*)malloc((maxSize) * sizeof(T));
                          ^
./testspace/vector-advan.cc:14:24: note: in instantiation of member function 'sjtu::vector<Integer>::vector' requested here
        sjtu::vector<Integer> vInt;
                              ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/stdlib.h:152:7: note: 'malloc' should be declared prior to the call site
void    *malloc(size_t);
         ^
In file included from ./testspace/vector-advan.cc:1:
In file included from ./testspace/vector.hpp:1:
./testspace/../submit/515030910644_游志宇/vector.hpp:164:13: error: call to function 'malloc' that is neither visible in the template definition nor found by argument-dependent lookup
                arr = (T*)malloc(maxSize * sizeof(T));
                          ^
./testspace/../submit/515030910644_游志宇/vector.hpp:262:27: note: in instantiation of member function 'sjtu::vector<Integer>::DoubleSpace' requested here
                if (nowSize == maxSize) DoubleSpace();
                                        ^
./testspace/vector-advan.cc:16:8: note: in instantiation of member function 'sjtu::vector<Integer>::push_back' requested here
                vInt.push_back(Integer(i));
                     ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/stdlib.h:152:7: note: 'malloc' should be declared prior to the call site
void    *malloc(size_t);
         ^
In file included from ./testspace/vector-advan.cc:1:
In file included from ./testspace/vector.hpp:1:
./testspace/../submit/515030910644_游志宇/vector.hpp:172:13: error: call to function 'malloc' that is neither visible in the template definition nor found by argument-dependent lookup
                arr = (T*)malloc((maxSize) * sizeof(T));
                          ^
./testspace/vector-advan.cc:24:40: note: in instantiation of member function 'sjtu::vector<Diamond::Matrix<double> >::vector' requested here
        sjtu::vector<Diamond::Matrix<double>> vM;
                                              ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/stdlib.h:152:7: note: 'malloc' should be declared prior to the call site
void    *malloc(size_t);
         ^
In file included from ./testspace/vector-advan.cc:1:
In file included from ./testspace/vector.hpp:1:
./testspace/../submit/515030910644_游志宇/vector.hpp:185:3: error: call to function 'free' that is neither visible in the template definition nor found by argument-dependent lookup
                free(arr);
                ^
./testspace/vector-advan.cc:24:40: note: in instantiation of member function 'sjtu::vector<Diamond::Matrix<double> >::~vector' requested here
        sjtu::vector<Diamond::Matrix<double>> vM;
                                              ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/stdlib.h:143:7: note: 'free' should be declared prior to the call site or in namespace 'Diamond'
void     free(void *);
         ^
In file included from ./testspace/vector-advan.cc:1:
In file included from ./testspace/vector.hpp:1:
./testspace/../submit/515030910644_游志宇/vector.hpp:164:13: error: call to function 'malloc' that is neither visible in the template definition nor found by argument-dependent lookup
                arr = (T*)malloc(maxSize * sizeof(T));
                          ^
./testspace/../submit/515030910644_游志宇/vector.hpp:262:27: note: in instantiation of member function 'sjtu::vector<Diamond::Matrix<double> >::DoubleSpace' requested here
                if (nowSize == maxSize) DoubleSpace();
                                        ^
./testspace/vector-advan.cc:26:6: note: in instantiation of member function 'sjtu::vector<Diamond::Matrix<double> >::push_back' requested here
                vM.push_back(Diamond::Matrix<double>(i, i, i));
                   ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/stdlib.h:152:7: note: 'malloc' should be declared prior to the call site
void    *malloc(size_t);
         ^
In file included from ./testspace/vector-advan.cc:1:
In file included from ./testspace/vector.hpp:1:
./testspace/../submit/515030910644_游志宇/vector.hpp:168:3: error: call to function 'free' that is neither visible in the template definition nor found by argument-dependent lookup
                free(arrs);
                ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/stdlib.h:143:7: note: 'free' should be declared prior to the call site or in namespace 'Diamond'
void     free(void *);
         ^
In file included from ./testspace/vector-advan.cc:1:
In file included from ./testspace/vector.hpp:1:
./testspace/../submit/515030910644_游志宇/vector.hpp:172:13: error: call to function 'malloc' that is neither visible in the template definition nor found by argument-dependent lookup
                arr = (T*)malloc((maxSize) * sizeof(T));
                          ^
./testspace/vector-advan.cc:36:27: note: in instantiation of member function 'sjtu::vector<Util::Bint>::vector' requested here
        sjtu::vector<Util::Bint> vBint;
                                 ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/stdlib.h:152:7: note: 'malloc' should be declared prior to the call site
void    *malloc(size_t);
         ^
In file included from ./testspace/vector-advan.cc:1:
In file included from ./testspace/vector.hpp:1:
./testspace/../submit/515030910644_游志宇/vector.hpp:185:3: error: call to function 'free' that is neither visible in the template definition nor found by argument-dependent lookup
                free(arr);
                ^
./testspace/vector-advan.cc:36:27: note: in instantiation of member function 'sjtu::vector<Util::Bint>::~vector' requested here
        sjtu::vector<Util::Bint> vBint;
                                 ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/stdlib.h:143:7: note: 'free' should be declared prior to the call site or in namespace 'Util'
void     free(void *);
         ^
In file included from ./testspace/vector-advan.cc:1:
In file included from ./testspace/vector.hpp:1:
./testspace/../submit/515030910644_游志宇/vector.hpp:164:13: error: call to function 'malloc' that is neither visible in the template definition nor found by argument-dependent lookup
                arr = (T*)malloc(maxSize * sizeof(T));
                          ^
./testspace/../submit/515030910644_游志宇/vector.hpp:262:27: note: in instantiation of member function 'sjtu::vector<Util::Bint>::DoubleSpace' requested here
                if (nowSize == maxSize) DoubleSpace();
                                        ^
./testspace/vector-advan.cc:38:9: note: in instantiation of member function 'sjtu::vector<Util::Bint>::push_back' requested here
                vBint.push_back(Util::Bint(i) * i);
                      ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/stdlib.h:152:7: note: 'malloc' should be declared prior to the call site
void    *malloc(size_t);
         ^
In file included from ./testspace/vector-advan.cc:1:
In file included from ./testspace/vector.hpp:1:
./testspace/../submit/515030910644_游志宇/vector.hpp:168:3: error: call to function 'free' that is neither visible in the template definition nor found by argument-dependent lookup
                free(arrs);
                ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/stdlib.h:143:7: note: 'free' should be declared prior to the call site or in namespace 'Util'
void     free(void *);
         ^
10 errors generated.
